<resources>
    <string name="app_name">BonBon</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_dashboard">Teacher Dashboard</string>
    <string name="menu_class_list">Class List</string>
    <string name="menu_assessment">General Assessment</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_guide">User Guide</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="search">Search...</string>
    <string name="save">Save</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="reset_password">Forgot your password? Click here to reset.</string>
    <string name="register_instead">New to BonBon? Click to create an account!</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_in_instead">Already have an account? Sign in instead</string>
    <string name="add_Profile_instructions">Use the navigation bar to navigate to the \'Class List\' page</string>
    <string name="dasboardInstructions">The dashboard is the space where you can view the recently taken observations and a list of the pupil in the classroom ordered by their scores. The scores are recorded on taking an assessment. The app will keep track of all assessments you complete for each child to show on the dashboard an average score. If a child has a lower score, they will be shown first on the list and this way it will be visible which children require more attention in the classroom.</string>
    <string name="edit_profiles">Each profile can be viewed, edited, and deleted. Viewing contact details and deleting profiles require biometric authentication. Make sure you have stored fingerprints accurately on your device and that you do not have any fingerprints of other people on your device.</string>
    <string name="notes_instructions">Each note should be associated with at least one child. In the tags text box, you can see suggestions of pupil names from profiles you have created. Make sure you have your pupil profiles set up before starting to make notes. The tags are what the app uses to associate notes with particular children so it is very important that you fill tags in accurately.</string>
    <string name="assessment_instructions">Assessments are there to provide a quick way to record how children are performing in the classroom. Each profile will have its own assessment card on the assessment page with three parameters to fill in:

        \n •	Social skills: to measure how the child is interacting with their peers, teachers, and society in general. Observe how the child plays during play time, how they talk and express themselves to others, and how well they expand their social circle.
        \n •	Health: observe the child’s health-related habits, hygiene, meals, and be on the lookout for any irregularities.
        \n •	Learning: observe how the child comprehends and learns what is being taught in the class room. See what interests them and how well can they apply what they learn in practical exercises.
\n For each measurement there is a rating bar to rate the child’s performance from 1 to 5. For each page there is also a save button. Assessments can be taken for a single selected child or a selected  group. However, it is recommended for the accuracy of data to complete the assessment for the entire class every time.
</string>
</resources>