<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_baseline_dashboard_24"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_classList"
            android:icon="@drawable/ic_baseline_groups_24"
            android:title="@string/menu_class_list" />
        <item
            android:id="@+id/nav_assessment"
            android:icon="@drawable/ic_baseline_assessment_24"
            android:title="@string/menu_assessment" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_settings" />

        <item
            android:id="@+id/nav_guide"
            android:icon="@drawable/ic_baseline_help_24"
            android:title="@string/menu_guide" />
    </group>
</menu>