<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dashboard">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.example.bonbon.ui.dashboard.DashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_classList"
        android:name="com.example.bonbon.ui.class_list.ClassListFragment"
        android:label="@string/menu_class_list"
        tools:layout="@layout/fragment_class_list" />
    <fragment
        android:id="@+id/nav_assessment"
        android:name="com.example.bonbon.ui.assessment.AssessmentFragment"
        android:label="@string/menu_assessment"
        tools:layout="@layout/fragment_assessment" />

    <fragment
        android:id="@+id/nav_guide"
        android:name="com.example.bonbon.ui.guide.GuideFragment"
        android:label="@string/menu_guide"
        tools:layout="@layout/fragment_guide" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.bonbon.ui.account.AccountFragment"
        tools:layout="@layout/fragment_account"
        android:label="@string/menu_settings"/>


</navigation>