<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.RegistrationFragment"
    android:background="@drawable/background_gradient">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            app:layout_constraintBottom_toBottomOf="@+id/registerAppLogo"
            app:layout_constraintHeight_percent=".2"
            android:layout_margin="5dp"
            app:layout_constraintStart_toStartOf="@+id/registerAppLogo"
            app:srcCompat="@drawable/candy_icon"
            app:tint="#B0FFFFFF" />
        <ImageView
            android:id="@+id/registerAppLogo"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent=".2"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/candy_icon" />

        <TextView
            android:id="@+id/registerTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Registration"
            android:textSize="25dp"
            android:textAlignment="center"
            android:background="@drawable/round_corners"
            android:backgroundTint="@color/purple_200"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerAppLogo" />

        <EditText
            android:id="@+id/registerEmailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="140dp"
            android:ems="10"
            android:background="@drawable/round_corners"
            android:padding="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerTitle" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Register"
            app:layout_constraintBottom_toTopOf="@+id/logInInsteadText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerConfirmPasswordInput" />

        <TextView
            android:id="@+id/logInInsteadText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/round_corners"
            android:backgroundTint="#C1A86EFF"
            android:padding="5dp"
            android:text="@string/sign_in_instead"
            android:textColor="@color/white"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/registerLastNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Last Name"
            android:background="@drawable/round_corners"
            android:padding="10dp"
            android:layout_margin="20dp"
            android:inputType="textPersonName"
            app:layout_constraintTop_toBottomOf="@+id/registerFirstNameInput"
            tools:layout_editor_absoluteX="0dp" />

        <EditText
            android:id="@+id/registerConfirmPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="Confirm Password"
            android:inputType="textPassword"
            android:background="@drawable/round_corners"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerPasswordInput" />

        <EditText
            android:id="@+id/registerPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/password"
            android:background="@drawable/round_corners"
            android:padding="10dp"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/registerLastNameInput"
            tools:layout_editor_absoluteX="20dp" />

        <EditText
            android:id="@+id/registerFirstNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="First Name"
            android:background="@drawable/round_corners"
            android:padding="10dp"
            android:layout_margin="20dp"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerEmailInput" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>